# kurama-ai

./: .env.example  .env.local.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api-go/: go.mod
apps/api-go/cmd/api/: main.go
apps/api-go/internal/http/: health.go
apps/gateway-go/: go.mod
apps/gateway-go/cmd/server/: main.go
apps/gateway-go/internal/provider/: provider.go
apps/gateway-go/internal/session/: session.go
apps/gateway-go/internal/webrtc/: transport.go
apps/orchestrator-py/: pyproject.toml
apps/orchestrator-py/app/: main.py
apps/orchestrator-py/app/agents/: router_agent.py
apps/orchestrator-py/app/graph/: nodes.py  router.py  runtime.py  state.py
apps/orchestrator-py/app/graph/nodes/: __init__.py
apps/orchestrator-py/app/knowledge/: __init__.py  retrieval.py
apps/orchestrator-py/app/llm/: azure_openai.py  validator.py
apps/orchestrator-py/app/memory/: shared_memory.py
apps/orchestrator-py/tests/: test_graph_runtime.py
apps/web/: package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/blog/: page.tsx
apps/web/src/app/labs/: page.tsx
apps/web/src/store/: voice-controls.ts  voice-store.ts
data/knowledge/: blog-index.json  passions.json  profile.json  projects.json  timeline.json
docs/: agent-evals.md  architecture.md  contracts.md  design-system-futuristic.md  full-plan.md  implementation-guide.md  langgraph-runtime.md  persona-kurama.md
scripts/: base-check.sh  dev-logs.sh  dev-up.sh
(+37 files in other folders)
